# av-technical-assessment

./: CMakeLists.txt  README.md
Q1/: Question-1.cc
Q2/: Question-2.cc  Question-2.test.cc  README.md  assumptions.txt
Q3/: Question-3.cc  README.md  hints.txt  track1.csv  track2.csv  track3.csv  visualize.py
